--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,3 +41,12 @@ footer {
   color: #777;
   border-top: 1px solid #eaeaea;
 }
+
+.not-found {
+  text-align: center;
+}
+
+.not-found a{
+  color: #4979ff;
+  text-decoration: underline;
+}
